--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="row">
             <div class=" col-lg-4 col-md-6 col-sm-12  padd">
                 <div class="card" style="width: 18rem; height: 25rem;">
-                    <img src="img/pic4.jpg" class="card-img-top" alt="...">
+                    <img src="https://www.instagram.com/p/CEaEXM9ppYu/" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
