--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </ol>
         <div class="carousel-inner" style=" width:100%; height: 500px !important;">
             <div class="carousel-item active">
-                <img src="img/pic10.jpg" class="d-block w-100 " alt="...">
+                <img src="https://github.com/rakshamurkute/rakshamurkute.github.io/blob/master/img/pic10.JPG" class="d-block w-100 " alt="...">
             </div>
             <div class="carousel-item">
                 <img src="img/pic2.jpg" class="d-block w-100" alt="...">
