Added image links

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="row">
             <div class=" col-lg-4 col-md-6 col-sm-12  padd">
                 <div class="card" style="width: 18rem; height: 25rem;">
-                    <img src="https://www.instagram.com/p/CEaEXM9ppYu/" class="card-img-top" alt="...">
+                    <img src="https://github.com/rakshamurkute/rakshamurkute.github.io/blob/master/img/pic4.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -58,7 +58,7 @@
             </div>
             <div class=" col-lg-4 col-md-6 col-sm-12  padd">
                 <div class="card" style="width: 18rem; height: 25rem;">
-                    <img src="img/pic5.jpg" class="card-img-top" alt="...">
+                    <img src="https://github.com/rakshamurkute/rakshamurkute.github.io/blob/master/img/pic5.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -68,7 +68,7 @@
             </div>
             <div class=" col-lg-4 col-md-6 col-sm-12  padd">
                 <div class="card" style="width: 18rem; height: 25rem;">
-                    <img src="img/pic6.jpg" class="card-img-top" alt="...">
+                    <img src="https://github.com/rakshamurkute/rakshamurkute.github.io/blob/master/img/pic6.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -78,7 +78,7 @@
             </div>
             <div class=" col-lg-4 col-md-6 col-sm-12  padd">
                 <div class="card" style="width: 18rem; height: 25rem;">
-                    <img src="img/pic7.jpg" class="card-img-top" alt="...">
+                    <img src="https://github.com/rakshamurkute/rakshamurkute.github.io/blob/master/img/pic7.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -88,7 +88,7 @@
             </div>
             <div class=" col-lg-4 col-md-6 col-sm-12  padd">
                 <div class="card" style="width: 18rem; height: 25rem;">
-                    <img src="img/pic8.jpg" class="card-img-top" alt="...">
+                    <img src="https://github.com/rakshamurkute/rakshamurkute.github.io/blob/master/img/pic8.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -98,7 +98,7 @@
             </div>
             <div class=" col-lg-4 col-md-6 col-sm-12  padd">
                 <div class="card" style="width: 18rem; height: 25rem;">
-                    <img src="img/pic9.jpg" class="card-img-top" alt="...">
+                    <img src="https://github.com/rakshamurkute/rakshamurkute.github.io/blob/master/img/pic9.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
