--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         </ol>
         <div class="carousel-inner" style=" width:100%; height: 500px !important;">
             <div class="carousel-item active">
-                <img src="https://github.com/rakshamurkute/rakshamurkute.github.io/blob/master/img/pic10.JPG" class="d-block w-100 " alt="...">
+                <img src="https://rakshamurkute.github.io/img/pic10.JPG" class="d-block w-100 " alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/pic2.jpg" class="d-block w-100" alt="...">
+                <img src="https://rakshamurkute.github.io/img/pic2.JPG" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/pic3.jpg" class="d-block w-100" alt="...">
+                <img src="https://rakshamurkute.github.io/img/pic3.JPG" class="d-block w-100" alt="...">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -48,7 +48,7 @@
         <div class="row">
             <div class=" col-lg-4 col-md-6 col-sm-12  padd">
                 <div class="card" style="width: 18rem; height: 25rem;">
-                    <img src="https://github.com/rakshamurkute/rakshamurkute.github.io/blob/master/img/pic4.JPG" class="card-img-top" alt="...">
+                    <img src="https://rakshamurkute.github.io/img/pic4.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -58,7 +58,7 @@
             </div>
             <div class=" col-lg-4 col-md-6 col-sm-12  padd">
                 <div class="card" style="width: 18rem; height: 25rem;">
-                    <img src="https://github.com/rakshamurkute/rakshamurkute.github.io/blob/master/img/pic5.JPG" class="card-img-top" alt="...">
+                    <img src="https://rakshamurkute.github.io/img/pic5.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -68,7 +68,7 @@
             </div>
             <div class=" col-lg-4 col-md-6 col-sm-12  padd">
                 <div class="card" style="width: 18rem; height: 25rem;">
-                    <img src="https://github.com/rakshamurkute/rakshamurkute.github.io/blob/master/img/pic6.JPG" class="card-img-top" alt="...">
+                    <img src="https://rakshamurkute.github.io/img/pic6.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -78,7 +78,7 @@
             </div>
             <div class=" col-lg-4 col-md-6 col-sm-12  padd">
                 <div class="card" style="width: 18rem; height: 25rem;">
-                    <img src="https://github.com/rakshamurkute/rakshamurkute.github.io/blob/master/img/pic7.JPG" class="card-img-top" alt="...">
+                    <img src="https://rakshamurkute.github.io/img/pic7.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -88,7 +88,7 @@
             </div>
             <div class=" col-lg-4 col-md-6 col-sm-12  padd">
                 <div class="card" style="width: 18rem; height: 25rem;">
-                    <img src="https://github.com/rakshamurkute/rakshamurkute.github.io/blob/master/img/pic8.JPG" class="card-img-top" alt="...">
+                    <img src="https://rakshamurkute.github.io/img/pic8.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -98,7 +98,7 @@
             </div>
             <div class=" col-lg-4 col-md-6 col-sm-12  padd">
                 <div class="card" style="width: 18rem; height: 25rem;">
-                    <img src="https://github.com/rakshamurkute/rakshamurkute.github.io/blob/master/img/pic9.JPG" class="card-img-top" alt="...">
+                    <img src="https://rakshamurkute.github.io/img/pic9.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
