--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
         <div class="row">
             <div class=" col-lg-4 col-md-6 col-sm-12  padd">
                 <div class="card" style="width: 18rem; height: 25rem;">
-                    <img src="https://rakshamurkute.github.io/img/pic4.JPG" class="card-img-top" alt="...">
+                    <img src="https://rakshamurkute.github.io/img/pic11.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="card-text">This is my favourite picture on your feed. Rare to find good pictures there.</p>
                     </div>
                 </div>
                 <br>
@@ -60,8 +59,7 @@
                 <div class="card" style="width: 18rem; height: 25rem;">
                     <img src="https://rakshamurkute.github.io/img/pic5.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="card-text">This is you video call face when we talk "science". But don't worry, I have loads of fun experiments planned to be performed on you! Be prepared.</p>
                     </div>
                 </div>
                 <br>
@@ -70,8 +68,7 @@
                 <div class="card" style="width: 18rem; height: 25rem;">
                     <img src="https://rakshamurkute.github.io/img/pic6.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="card-text">You look like pooh here. But not the one from K3G but your in-house one. Stone poha!! </p>
                     </div>
                 </div>
                 <br>
@@ -80,8 +77,7 @@
                 <div class="card" style="width: 18rem; height: 25rem;">
                     <img src="https://rakshamurkute.github.io/img/pic7.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="card-text">Well..well..well.. I know you are blessed to have a picture with me. This picture is your achievement for life. Ly for saving me from bullies <3</p>
                     </div>
                 </div>
                 <br>
@@ -90,8 +86,7 @@
                 <div class="card" style="width: 18rem; height: 25rem;">
                     <img src="https://rakshamurkute.github.io/img/pic8.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="card-text">Seeing this picture made me realize, puberty did hit you. You'll still be my buffie that's gonna change.</p>
                     </div>
                 </div>
                 <br>
@@ -100,8 +95,7 @@
                 <div class="card" style="width: 18rem; height: 25rem;">
                     <img src="https://rakshamurkute.github.io/img/pic9.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="card-text">I never undertood your tongue pose. Showing it what it can do? Idk. But please stop this pose!</p>
                     </div>
                 </div>
                 <br>
