--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="card" style="width: 18rem; height: 25rem;">
                     <img src="https://rakshamurkute.github.io/img/pic5.JPG" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">This is you video call face when we talk "science". But don't worry, I have loads of fun experiments planned to be performed on you! Be prepared.</p>
+                        <p class="card-text">Your face when we talk "science". But don't worry, I have loads of fun experiments planned to be performed on you! Be prepared.</p>
                     </div>
                 </div>
                 <br>
