--- a/index.html
+++ b/index.html
@@ -104,7 +104,14 @@
         <br>
 
 
+<footer class="page-footer font-small cyan darken-3">
+          <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+  </div>
+  <!-- Copyright -->
 
+</footer>
 
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
